tests/errors/syn_method30.java
public class syn_method30 {
public static void main ) {
 
}
}